--- a/strikezone.html
+++ b/strikezone.html
@@ -65,7 +65,7 @@ function incrementballstop() {
 	pitch++;
 	document.getElementById('ballstop').value = pitch;
 	
-	document.getElementById("actiont").innerHTML = "HI";
+	document.getElementById("actiont").innerHTML = "BALL BALL BALL BALL BALL BALL BALL BALL BALL BALL";
 	setTimeout(function() {
 		document.getElementById("actiont").innerHTML = " ";
 	}, delay);
@@ -76,7 +76,7 @@ function incrementstrikestop() {
 	pitch++;
 	document.getElementById('strikestop').value = pitch;
 	
-	document.getElementById("actiont").innerHTML = "HI";
+	document.getElementById("actiont").innerHTML = "STRIKE STRIKE STRIKE STRIKE STRIKE STRIKE STRIKE ";
 	setTimeout(function() {
 		document.getElementById("actiont").innerHTML = " ";
 	}, delay);
@@ -86,7 +86,7 @@ function incrementballsbot() {
 	pitch++;
 	document.getElementById('ballsbot').value = pitch;
 	
-	document.getElementById("actionb").innerHTML = "HI";
+	document.getElementById("actionb").innerHTML = "BALL BALL BALL BALL BALL BALL BALL BALL BALL BALL";
 	setTimeout(function() {
 		document.getElementById("actionb").innerHTML = " ";
 	}, delay);
@@ -96,7 +96,7 @@ function incrementstrikesbot() {
 	pitch++;
 	document.getElementById('strikesbot').value = pitch;
 	
-	document.getElementById("actionb").innerHTML = "HI";
+	document.getElementById("actionb").innerHTML = "STRIKE STRIKE STRIKE STRIKE STRIKE STRIKE STRIKE ";
 	setTimeout(function() {
 		document.getElementById("actionb").innerHTML = " ";
 	}, delay);
