--- a/strikezone.html
+++ b/strikezone.html
@@ -19,6 +19,9 @@ background-color: lightyellow;
  font-size: 40px;
  background-color: lightblue;
  }
+ #actiont, #actionb {
+ font-size: 40px;
+ }
 
 </style>
 </head>
@@ -67,7 +70,7 @@ function incrementballstop() {
 	pitch++;
 	document.getElementById('ballstop').value = pitch;
 	
-	document.getElementById("actiont").innerHTML = "BALL BALL BALL BALL BALL BALL BALL";
+	document.getElementById("actiont").innerHTML = "BALL BALL BALL BALL";
 	setTimeout(function() {
 		document.getElementById("actiont").innerHTML = " ";
 	}, delay);
@@ -78,7 +81,7 @@ function incrementstrikestop() {
 	pitch++;
 	document.getElementById('strikestop').value = pitch;
 	
-	document.getElementById("actiont").innerHTML = "STRIKE STRIKE STRIKE STRIKE  ";
+	document.getElementById("actiont").innerHTML = "STRIKE STRIKE STRIKE";
 	setTimeout(function() {
 		document.getElementById("actiont").innerHTML = " ";
 	}, delay);
@@ -88,7 +91,7 @@ function incrementballsbot() {
 	pitch++;
 	document.getElementById('ballsbot').value = pitch;
 	
-	document.getElementById("actionb").innerHTML = "BALL BALL BALL BALL BALL BALL BALL ";
+	document.getElementById("actionb").innerHTML = "BALL BALL BALL BALL";
 	setTimeout(function() {
 		document.getElementById("actionb").innerHTML = " ";
 	}, delay);
@@ -98,7 +101,7 @@ function incrementstrikesbot() {
 	pitch++;
 	document.getElementById('strikesbot').value = pitch;
 	
-	document.getElementById("actionb").innerHTML = "STRIKE STRIKE STRIKE STRIKE  ";
+	document.getElementById("actionb").innerHTML = "STRIKE STRIKE STRIKE";
 	setTimeout(function() {
 		document.getElementById("actionb").innerHTML = " ";
 	}, delay);
