--- a/strikezone.html
+++ b/strikezone.html
@@ -12,9 +12,16 @@
 	background-color: lightblue;
 }
 
+#ballstop, #ballsbot {
+	background-color: pink;
+}
+
+#strikestop, #strikesbot {
+	background-color: lightgreen;
+}
+
 #strikestop, #strikesbot, #strikestop, #ballstop, #ballsbot {
 	font-size: 40px;
-	background-color: lightyellow;
 }
 
 #totalbot, #totaltop {
@@ -22,7 +29,7 @@
 	background-color: yellow;
 }
 
-#newpitcherbuttontop, #newpitcherbuttonbot, #recall {
+#newpitcherbuttontop, #newpitcherbuttonbot, #recallt, #recallb {
 	font-size: 40px;
 	background-color: lightblue;
 }
@@ -50,14 +57,43 @@
 	<h2 id="x_result">0</h2>
 	<h2 id="y_result">0</h2>
 	<b id="actiont"></b>
-	<input size="2" type="text" id="ballstop" value="0">
-	<input size="2" type="text" id='strikestop' value="0">
-	<input size="2" type="text" id="totaltop" value="0">
+	<input id="ballstop" size="3" type="text" id="ballstop" value="0">
+	<input id="strikestop" size="3" type="text" id='strikestop' value="0">
+	<input id="totaltop" size="3" type="text" id="totaltop" value="0">
+
+	<input size="3" type="text" id="top1" placeholder="1T"
+		onclick="pitchesTop1();" readonly value="">
+	<input size="3" type="text" id="top2" placeholder="2T"
+		onclick="pitchesTop2();" readonly value="">
+	<input size="3" type="text" id="top3" placeholder="3T"
+		onclick="pitchesTop3();" readonly value="">
+	<input size="3" type="text" id="top4" placeholder="4T"
+		onclick="pitchesTop4();" readonly value="" >
+	<input size="3" type="text" id="top5" placeholder="5T"
+		onclick="pitchesTop5();" readonly value="">
+	<input size="3" type="text" id="top6" placeholder="6T"
+		onclick="pitchesTop6();" readonly value="">
+		
+	<input size="3" type="text" id="top7" placeholder="7T"
+		onclick="pitchesTop7();" readonly value="">
+		
+	<input size="3" type="text" id="top8" placeholder="8T"
+		onclick="pitchesTop8();" readonly value="">
+		
+	<input size="3" type="text" id="top9" placeholder="9T"
+		onclick="pitchesTop9();" readonly value="">
+
+	<!-- <input style="text-align: center;"
+				placeholder="1T" style="font-weight: bold;" type="text" id="1stTop"
+				maxlength="2" size="3" onclick="pitchesTop1Function()" readonly
+				value=""> -->
+
+
 	<br>
 	<button onclick="zero4newpitchertop();" id="newpitcherbuttontop">NEW
 		PITCHER</button>
 	&nbsp;&nbsp;
-	<button onclick="recall();" id="recall">RECALL</button>
+	<button onclick="recall();" id="recallt">RECALL</button>
 	<br>
 
 
@@ -81,12 +117,204 @@
 	<input size="3" type="text" id="ballsbot" value="0">
 	<input size="3" type="text" id='strikesbot' value="0">
 	<input size="3" type="text" id="totalbot" value="0">
+	<input size="3" type="text" id="bot1" value="0" placeholder="1B" onclick="pitchesBot1();" readonly>
+	<input size="3" type="text" id="bot2" value="0" placeholder="2B" onclick="pitchesBot2();" readonly>
+	<input size="3" type="text" id="bot3" value="0" placeholder="3B" onclick="pitchesBot3();" readonly>
+	<input size="3" type="text" id="bot4" value="0" placeholder="4B" onclick="pitchesBot4();" readonly>
+	<input size="3" type="text" id="bot5" value="0" placeholder="5B" onclick="pitchesBot5();" readonly>
+	<input size="3" type="text" id="bot6" value="0" placeholder="6B" onclick="pitchesBot6();" readonly>
+	<input size="3" type="text" id="bot7" value="0" placeholder="7B" onclick="pitchesBot7();" readonly>
+	<input size="3" type="text" id="bot8" value="0" placeholder="8B" onclick="pitchesBot8();" readonly>
+	<input size="3" type="text" id="bot9" value="0" placeholder="9B" onclick="pitchesBot9();" readonly>
 	<br>
 	<button onclick="zero4newpitcherbot();" id="newpitcherbuttonbot">NEW
 		PITCHER</button>
+	&nbsp;&nbsp;
+	<button onclick="recall();" id="recallb">RECALL</button>
+	<br>
+
+
+
+
+
+
+
 
 	<script>
 		var delay = 500;
+
+		function pitchesTop1() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			document.getElementById('top1').value = pitchestop;
+			document.getElementById('top1').style.backgroundColor = "aqua";
+		}		
+		function pitchesTop2() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			document.getElementById('top2').value = pitchestop - pitches1st;
+			document.getElementById('top2').style.backgroundColor = "aqua";
+		}
+		function pitchesTop3() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			document.getElementById('top3').value = pitchestop - pitches1st - pitches2nd;
+			document.getElementById('top3').style.backgroundColor = "aqua";
+		}
+		function pitchesTop4() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			document.getElementById('top4').value = pitchestop - pitches1st - pitches2nd - pitches3rd;
+			document.getElementById('top4').style.backgroundColor = "aqua";
+		}
+		function pitchesTop5() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			var pitches4th = parseInt(document.getElementById('top4').value);
+			document.getElementById('top5').value = pitchestop - pitches1st - pitches2nd - pitches3rd - pitches4th;
+			document.getElementById('top5').style.backgroundColor = "aqua";
+		}
+		function pitchesTop6() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			var pitches4th = parseInt(document.getElementById('top4').value);
+			var pitches5th = parseInt(document.getElementById('top5').value);
+			document.getElementById('top6').value = pitchestop - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th;
+			document.getElementById('top6').style.backgroundColor = "aqua";
+		}
+		function pitchesTop7() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			var pitches4th = parseInt(document.getElementById('top4').value);
+			var pitches5th = parseInt(document.getElementById('top5').value);
+			var pitches6th = parseInt(document.getElementById('top6').value);
+			document.getElementById('top7').value = pitchestop - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th;
+			document.getElementById('top7').style.backgroundColor = "aqua";
+		}
+		function pitchesTop8() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			var pitches4th = parseInt(document.getElementById('top4').value);
+			var pitches5th = parseInt(document.getElementById('top5').value);
+			var pitches6th = parseInt(document.getElementById('top6').value);
+			var pitches7th = parseInt(document.getElementById('top7').value);
+			document.getElementById('top8').value = pitchestop - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th - pitches7th;
+			document.getElementById('top8').style.backgroundColor = "aqua";
+		}
+		function pitchesTop9() {
+			var pitchestop = parseInt(document.getElementById('totaltop').value);
+			var pitches1st = parseInt(document.getElementById('top1').value);
+			var pitches2nd = parseInt(document.getElementById('top2').value);
+			var pitches3rd = parseInt(document.getElementById('top3').value);
+			var pitches4th = parseInt(document.getElementById('top4').value);
+			var pitches5th = parseInt(document.getElementById('top5').value);
+			var pitches6th = parseInt(document.getElementById('top6').value);
+			var pitches7th = parseInt(document.getElementById('top7').value);
+			var pitches8th = parseInt(document.getElementById('top8').value);
+			document.getElementById('top9').value = pitchestop - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th - pitches7th - pitches8th;
+			document.getElementById('top9').style.backgroundColor = "aqua";
+		}
+		
+		function pitchesBot1() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			document.getElementById('bot1').value = pitchesbot;
+			document.getElementById('bot1').style.backgroundColor = "aqua";
+		}
+		function pitchesBot2() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			document.getElementById('bot2').value = pitchesbot - pitches1st;
+			document.getElementById('bot2').style.backgroundColor = "aqua";
+		}
+		function pitchesBot3() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			document.getElementById('bot3').value = pitchesbot - pitches1st - pitches2nd;
+			document.getElementById('bot3').style.backgroundColor = "aqua";
+		}
+		function pitchesBot4() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			document.getElementById('bot4').value = pitchesbot - pitches1st - pitches2nd - pitches3rd;
+			document.getElementById('bot4').style.backgroundColor = "aqua";
+		}
+		function pitchesBot5() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			var pitches4th = parseInt(document.getElementById('bot4').value);
+			document.getElementById('bot5').value = pitchesbot - pitches1st - pitches2nd - pitches3rd - pitches4th;
+			document.getElementById('bot5').style.backgroundColor = "aqua";
+		}
+		function pitchesBot6() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			var pitches4th = parseInt(document.getElementById('bot4').value);
+			var pitches5th = parseInt(document.getElementById('bot5').value);
+			document.getElementById('bot6').value = pitchesbot - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th;
+			document.getElementById('bot6').style.backgroundColor = "aqua";
+		}
+		function pitchesBot7() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			var pitches4th = parseInt(document.getElementById('bot4').value);
+			var pitches5th = parseInt(document.getElementById('bot5').value);
+			var pitches6th = parseInt(document.getElementById('bot6').value);
+			document.getElementById('bot7').value = pitchesbot - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th;
+			document.getElementById('bot7').style.backgroundColor = "aqua";
+		}
+		function pitchesBot8() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			var pitches4th = parseInt(document.getElementById('bot4').value);
+			var pitches5th = parseInt(document.getElementById('bot5').value);
+			var pitches6th = parseInt(document.getElementById('bot6').value);
+			var pitches7th = parseInt(document.getElementById('bot7').value);
+			document.getElementById('bot8').value = pitchesbot - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th - pitches7th;
+			document.getElementById('bot8').style.backgroundColor = "aqua";
+		}
+		function pitchesBot9() {
+			var pitchesbot = parseInt(document.getElementById('totalbot').value);
+			var pitches1st = parseInt(document.getElementById('bot1').value);
+			var pitches2nd = parseInt(document.getElementById('bot2').value);
+			var pitches3rd = parseInt(document.getElementById('bot3').value);
+			var pitches4th = parseInt(document.getElementById('bot4').value);
+			var pitches5th = parseInt(document.getElementById('bot5').value);
+			var pitches6th = parseInt(document.getElementById('bot6').value);
+			var pitches7th = parseInt(document.getElementById('bot7').value);
+			var pitches8th = parseInt(document.getElementById('bot8').value);
+			document.getElementById('bot9').value = pitchesbot - pitches1st - 
+			pitches2nd - pitches3rd - pitches4th - pitches5th - pitches6th - pitches7th - pitches8th;
+			document.getElementById('bot9').style.backgroundColor = "aqua";
+		}
+		
 
 		function recall() {
 			document.getElementById('ballstop').value = localStorage
