--- a/strikezone.html
+++ b/strikezone.html
@@ -9,9 +9,14 @@
 }
 
 #sv_window {
-	background-color: lightblue;
+	//background-color: lightblue;
 }
-
+#top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
+font-size: 40px;
+}
+#bot1, #bot2, #bot3, #bot4, #bot5, #bot6, #bot7, #bot8, #bot9 {
+font-size: 40px;
+}
 #ballstop, #ballsbot {
 	background-color: pink;
 }
@@ -24,8 +29,8 @@
 	font-size: 40px;
 }
 
-#totalbot, #totaltop {
-	font-size: 40px;
+#totaltop, #totalbot {
+	font-size: 60px;
 	background-color: yellow;
 }
 
@@ -60,6 +65,7 @@
 	<input id="ballstop" size="3" type="text" id="ballstop" value="0">
 	<input id="strikestop" size="3" type="text" id='strikestop' value="0">
 	<input id="totaltop" size="3" type="text" id="totaltop" value="0">
+	<br>
 
 	<input size="3" type="text" id="top1" placeholder="1T"
 		onclick="pitchesTop1();" readonly value="">
@@ -73,13 +79,10 @@
 		onclick="pitchesTop5();" readonly value="">
 	<input size="3" type="text" id="top6" placeholder="6T"
 		onclick="pitchesTop6();" readonly value="">
-		
 	<input size="3" type="text" id="top7" placeholder="7T"
-		onclick="pitchesTop7();" readonly value="">
-		
+		onclick="pitchesTop7();" readonly value="">		
 	<input size="3" type="text" id="top8" placeholder="8T"
-		onclick="pitchesTop8();" readonly value="">
-		
+		onclick="pitchesTop8();" readonly value="">		
 	<input size="3" type="text" id="top9" placeholder="9T"
 		onclick="pitchesTop9();" readonly value="">
 
@@ -117,6 +120,7 @@
 	<input size="3" type="text" id="ballsbot" value="0">
 	<input size="3" type="text" id='strikesbot' value="0">
 	<input size="3" type="text" id="totalbot" value="0">
+	<br>
 	<input size="3" type="text" id="bot1" value="0" placeholder="1B" onclick="pitchesBot1();" readonly>
 	<input size="3" type="text" id="bot2" value="0" placeholder="2B" onclick="pitchesBot2();" readonly>
 	<input size="3" type="text" id="bot3" value="0" placeholder="3B" onclick="pitchesBot3();" readonly>
