--- a/strikezone.html
+++ b/strikezone.html
@@ -121,15 +121,15 @@ font-size: 40px;
 	<input size="3" type="text" id='strikesbot' value="0">
 	<input size="3" type="text" id="totalbot" value="0">
 	<br>
-	<input size="3" type="text" id="bot1" value="0" placeholder="1B" onclick="pitchesBot1();" readonly>
-	<input size="3" type="text" id="bot2" value="0" placeholder="2B" onclick="pitchesBot2();" readonly>
-	<input size="3" type="text" id="bot3" value="0" placeholder="3B" onclick="pitchesBot3();" readonly>
-	<input size="3" type="text" id="bot4" value="0" placeholder="4B" onclick="pitchesBot4();" readonly>
-	<input size="3" type="text" id="bot5" value="0" placeholder="5B" onclick="pitchesBot5();" readonly>
-	<input size="3" type="text" id="bot6" value="0" placeholder="6B" onclick="pitchesBot6();" readonly>
-	<input size="3" type="text" id="bot7" value="0" placeholder="7B" onclick="pitchesBot7();" readonly>
-	<input size="3" type="text" id="bot8" value="0" placeholder="8B" onclick="pitchesBot8();" readonly>
-	<input size="3" type="text" id="bot9" value="0" placeholder="9B" onclick="pitchesBot9();" readonly>
+	<input size="3" type="text" id="bot1" placeholder="1B" onclick="pitchesBot1();" readonly value="">
+	<input size="3" type="text" id="bot2" placeholder="2B" onclick="pitchesBot2();" readonly value="">
+	<input size="3" type="text" id="bot3" placeholder="3B" onclick="pitchesBot3();" readonly value="">
+	<input size="3" type="text" id="bot4" placeholder="4B" onclick="pitchesBot4();" readonly value="">
+	<input size="3" type="text" id="bot5" placeholder="5B" onclick="pitchesBot5();" readonly value="">
+	<input size="3" type="text" id="bot6" placeholder="6B" onclick="pitchesBot6();" readonly value="">
+	<input size="3" type="text" id="bot7" placeholder="7B" onclick="pitchesBot7();" readonly value="">
+	<input size="3" type="text" id="bot8" placeholder="8B" onclick="pitchesBot8();" readonly value="">
+	<input size="3" type="text" id="bot9" placeholder="9B" onclick="pitchesBot9();" readonly value="">
 	<br>
 	<button onclick="zero4newpitcherbot();" id="newpitcherbuttonbot">NEW
 		PITCHER</button>
