--- a/strikezone.html
+++ b/strikezone.html
@@ -81,6 +81,7 @@ font-size: 40px;
 		onclick="pitchesTop5();" readonly value="">
 	<input size="3" type="text" id="top6" placeholder="6T"
 		onclick="pitchesTop6();" readonly value="">
+		<br>
 	<input size="3" type="text" id="top7" placeholder="7T"
 		onclick="pitchesTop7();" readonly value="">		
 	<input size="3" type="text" id="top8" placeholder="8T"
@@ -129,6 +130,7 @@ font-size: 40px;
 	<input size="3" type="text" id="bot4" placeholder="4B" onclick="pitchesBot4();" readonly value="">
 	<input size="3" type="text" id="bot5" placeholder="5B" onclick="pitchesBot5();" readonly value="">
 	<input size="3" type="text" id="bot6" placeholder="6B" onclick="pitchesBot6();" readonly value="">
+	<br>
 	<input size="3" type="text" id="bot7" placeholder="7B" onclick="pitchesBot7();" readonly value="">
 	<input size="3" type="text" id="bot8" placeholder="8B" onclick="pitchesBot8();" readonly value="">
 	<input size="3" type="text" id="bot9" placeholder="9B" onclick="pitchesBot9();" readonly value="">
@@ -387,7 +389,7 @@ font-size: 40px;
 			.getItem("bot7");
 			document.getElementById('bot8').value = localStorage
 			.getItem("bot8");
-			document.getEementById('bot9').value = localStorage
+			document.getElementById('bot9').value = localStorage
 			.getItem("bot9");
 			
 			
