--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body id="body">
 	<h1>YOUR SPORTS CONNECTION</h1>
 	<br>
+	<a href="strikezone.html">STRIKEZONE</a>
 	<br>
+	<a href="experiment.html">PLAY PLAY PLAY</a>
 	<br>
 	<h2>A WAY TO SCORE A SPORTS GAME OVER THE WEB</h2>
 
@@ -321,7 +323,7 @@
 			id="visitorfootballteam" onkeypress="storefootballteams();"> <br>
 			 <a href="football_sc_h.html">Football Scoring Page</a>
 			 <br>
-			  <a href="strikezone.html">STRIKEZONE</a>
+			  
 		<script type="text/javascript">
 			function storefootballteams()
 			{
