--- a/strikezone.html
+++ b/strikezone.html
@@ -9,7 +9,7 @@
 }
 
 #sv_window {
-	background-color: lightblue;
+	/* background-color: lightblue; */
 }
 #top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
 font-size: 40px;
