--- a/strikezone.html
+++ b/strikezone.html
@@ -9,7 +9,7 @@
 }
 
 #sv_window {
-	/* background-color: lightblue; */
+	 background-color: lightblue; 
 }
 #top1, #top2, #top3, #top4, #top5, #top6, #top7, #top8, #top9 {
 font-size: 40px;
@@ -102,8 +102,8 @@ font-size: 40px;
 	<button onclick="recall();" id="recallt">RECALL</button>
 	<br>
 
-
-	<svg id="sv_window" width="700" height="2100"
+<svg id="sv_window" width="1050" height="2100"
+	<!-- <svg id="sv_window" width="700" height="2100" -->
 		xmlns="http://www.w3.org/2000/svg"
 		xmlns:svg="http://www.w3.org/2000/svg">
  <g>
