--- a/strikezone.html
+++ b/strikezone.html
@@ -108,17 +108,17 @@ font-size: 40px;
 		xmlns:svg="http://www.w3.org/2000/svg">
  <g>
   <title>BALLS AND STRIKES</title>
-  <rect onclick="incrementballstop(); addpitchestop();" y="60" x="60"
-			height="900" width="586" fill="red" id="topredballs" />
+  <rect onclick="incrementballstop(); addpitchestop();" x="210" y="60"
+			width="586" height="900" fill="red" id="topredballs" />
 			
-  <rect onclick="incrementstrikestop(); addpitchestop();" x="255"
-			y="360" width="180" height="285" fill="green" id="topgreenstrikes" />
+  <rect onclick="incrementstrikestop(); addpitchestop();" x="400" y="360" 
+			width="180" height="285" fill="green" id="topgreenstrikes" />
 			
-  <rect onclick="incrementballsbot(); addpitchesbot();" y="1190" x="60"
-			height="900" width="586" fill="red" id="botredballs" />
+  <rect onclick="incrementballsbot(); addpitchesbot();"  x="210" y="1190"
+			width="586" height="900" fill="red" id="botredballs" />
 			
-  <rect onclick="incrementstrikesbot(); addpitchesbot();" x="255"
-			y="1500" width="180" height="285" fill="green" id="botgreenstrikes" />
+  <rect onclick="incrementstrikesbot(); addpitchesbot();" x="400" y="1500" 
+  			width="180" height="285" fill="green" id="botgreenstrikes" />
  </g>
 </svg>
 
